--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "client": "cd client && npm start",
     "watch": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "deploy": "concurrently \"cd client && npm run build\" \"cd server && npm start\"",
+    "deploy-cluster": "concurrently \"cd client && npm run build\" \"cd server && npm run cluster\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.2.2"
+    "concurrently": "^7.2.2",
+    "dotenv": "^16.0.1"
   }
 }
