SPACE X project and section done

--- a/server/src/config.env
+++ b/server/src/config.env
@@ -1,2 +1,3 @@
-DB_PSW = JtwNffr9XQ6XyBVl;
-DB = `mongodb+srv://bakhtiyorjon:<password>@nasacluster.lop5k.mongodb.net/?retryWrites=true&w=majority`;
+DB =mongodb+srv://bakhtiyorjon:<password>@nasacluster.lop5k.mongodb.net/?retryWrites=true&w=majority
+DB_PSW = RCSihefpZnOF2Xpf
+PORT=8000
