--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.2.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "react-scripts": "^5.0.1"
   }
 }
